updated to fit accessibility guidelines

--- a/portfolio/about/about.html
+++ b/portfolio/about/about.html
@@ -111,7 +111,7 @@
                         </div>
                         <div class="collage-right">
                             <div class="abt-desc ">
-                                Outside of traveling, I'm probably either practicing my videography skills with my DJI Mini 2 drone and making Instagram reels on my video diary page <a href="https://www.instagram.com/starfruit.shots/?igshid=NDk5N2NlZjQ%3D" target="_blank" class="green-font">@starfruit.shots</a>, cooking or finding the next best food place to try, or hanging out with friends! 
+                                Outside of traveling, I'm probably either practicing my videography skills with my DJI Mini 2 drone and making Instagram reels on my video diary page <a href="https://www.instagram.com/starfruit.shots/?igshid=NDk5N2NlZjQ%3D" target="_blank" class="green-font bold">@starfruit.shots</a>, cooking or finding the next best food place to try, or hanging out with friends! 
                             </div>
                         </div>
                     </div>
