--- a/portfolio/projects/pamela.html
+++ b/portfolio/projects/pamela.html
@@ -41,11 +41,11 @@
                  </div>
                  <div class="desc-parent">
                      <div class="desc">
-                         <img class="icon" alt="calendar-icon" src="../assets/calendar.png" />
+                         <img class="icon" alt="calendar icon" src="../assets/calendar.png" />
                          <div class="date">March - April 2022</div>
                      </div>
                      <div class="desc">
-                         <img class="icon" alt="group-icon" src="../assets/group.png" />
+                         <img class="icon" alt="group icon" src="../assets/group.png" />
                          <div class="date">Website Redesign for 67-250</div>
                      </div>
                  </div>
@@ -65,9 +65,9 @@
                     <div class="subheading">Lo-Fi Wireframes</div>
             </div>
             <div class="wire-section">
-                <img class="port lofi" alt="start-page" src="../assets/lofi1.PNG" />
-                <img class="port lofi" alt="start-page" src="../assets/lofi2.PNG" />
-                <img class="port lofi" alt="start-page" src="../assets/lofi3.PNG" />
+                <img class="port lofi" alt="pamela lofi prototype 1" src="../assets/lofi1.PNG" />
+                <img class="port lofi" alt="pamela lofi prototype 2" src="../assets/lofi2.PNG" />
+                <img class="port lofi" alt="pamela lofi prototype 3" src="../assets/lofi3.PNG" />
             </div>
         </div>
 
@@ -76,8 +76,8 @@
                     <div class="subheading">Redesigned Logo and Color Palette</div>
             </div>
             <div class="wire-section">
-                <img class="port logo-size" alt="start-page" src="../assets/pamlogo.png" />
-                <img class="port color-palette" alt="intro-page" src="../assets/pamcolor.png" /> 
+                <img class="port logo-size" alt="redesigned logo" src="../assets/pamlogo.png" />
+                <img class="port color-palette" alt="redesigned color palette" src="../assets/pamcolor.png" /> 
             </div>
         </div>
 
@@ -86,7 +86,7 @@
                     <div class="subheading">Information Architecture</div>
             </div>
             <div class="wire-section">
-                <img class="port info-arch" alt="start-page" src="../assets/infoarch.png" />
+                <img class="port info-arch" alt="information architecture diagram" src="../assets/infoarch.png" />
             </div>
             <div class="description">
                 This site is built intentionally and carefully, with clear font sizes, a consistent color scheme, and ease of navigation emphasized throughout. When the user lands on the main page, they’ll notice the large, newly designed Pamela’s Diner logo and their motto. There’s a picture of one of their stores on the main page to draw the user in and provide visual stimulation. On the other four pages, I utilized subtitles and headers to break up the information and make the page more readable. I also consistently used sized and formatted body text to increase readability. The two most important areas of the website to increase ease of navigation are located at the top for easy access. The top of the website has the fixed menu and search bar so the user doesn’t have to scroll all the way up to move pages and there is no need for extra links in the footer. The footer on the right hand side contains all the important information so users can easily contact Pamela’s Diner in Shadyside, and the clickable logo allows for easy navigation back to the main page. The main objective of the organization was clear headings to organize information (hence, the Google Maps of the diner is under the Location page). Minimal, if any, information is redundant on the website, and important information (such as Pamela’s contact information) is accessible on each and every page. 
@@ -225,13 +225,13 @@ thoughts/concerns/comments
                     <div class="subheading">Website Design</div>
             </div>
             <div class="img-sections">
-                <img class="imgs" alt="japanese-garden" src="../assets/pam1.PNG" />
-                <img class="imgs" alt="japanese-garden" src="../assets/pam2.PNG" />
-                <img class="imgs" alt="japanese-garden" src="../assets/pam5.PNG" />
+                <img class="imgs" alt="redesigned Pamela's Diner website page 1" src="../assets/pam1.PNG" />
+                <img class="imgs" alt="redesigned Pamela's Diner website page 2" src="../assets/pam2.PNG" />
+                <img class="imgs" alt="redesigned Pamela's Diner website page 3" src="../assets/pam5.PNG" />
             </div>
             <div class="img-sections">
-                <img class="imgs" alt="japanese-garden" src="../assets/pam3.PNG" />
-                <img class="imgs" alt="japanese-garden" src="../assets/pam4.PNG" />
+                <img class="imgs" alt="redesigned Pamela's Diner website page 4" src="../assets/pam3.PNG" />
+                <img class="imgs" alt="redesigned Pamela's Diner website page 5" src="../assets/pam4.PNG" />
             </div>
         </div>
 
@@ -266,14 +266,14 @@ thoughts/concerns/comments
                 <div class="contact center">
                     <a href = "jamjelly.html">
                         <div class="button left">
-                            <img class="arrow" alt="left-arrow" src="../assets/left.png" />
+                            <img class="arrow" alt="left arrow" src="../assets/left.png" />
                             <div>prev</div>
                         </div>   
                     </a>
                     <a class="small-text" href = "gaugeme.html">   
                         <div class="button right">
                             <div>next</div>
-                            <img class="arrow" alt="right-arrow" src="../assets/right.png" />
+                            <img class="arrow" alt="right arrow" src="../assets/right.png" />
                         </div>   
                     </a>
                 </div>
@@ -284,30 +284,30 @@ thoughts/concerns/comments
             <div class="container">
                 <div class="services-list-1">
                     <a class="contact" href = "mailto:huarui.lai@gmail.com" target="_blank">
-                        <img class="icon" alt="mail-icon" src="../assets/plane.png" />
+                        <img class="icon" alt="mail icon" src="../assets/plane.png" />
                         <div class="small-text">
                             <div class="username">huarui.lai@gmail.com</div>
                         </div>
                     </a>
                     <a class="contact" href = "https://github.com/hlai1" target="_blank">
-                        <img class="icon" alt="github-icon" src="../assets/github.png" />
+                        <img class="icon" alt="github icon" src="../assets/github.png" />
                         <div class="small-text">
                             <div class="username">hlai1</div>
                         </div>
                     </a>
                     <a class="contact" href = "https://linkedin.com/in/huarui-lai" target="_blank">
-                        <img class="icon" alt="linkedin-icon" src="../assets/linkedin.png" />
+                        <img class="icon" alt="linkedin icon" src="../assets/linkedin.png" />
                         <div class="small-text">
                             <div class="username">Huarui Lai</div>
                         </div>
                     </a>
                 </div>
                 <div class="contact center">
-                    <img class="icon" alt="star-icon" src="../assets/star.png" />
+                    <img class="icon" alt="star icon" src="../assets/star.png" />
                     <div class="small-text">   
                         <div class="username-1">made by Huarui Lai</div>
                     </div>
-                    <img class="icon" alt="star-icon" src="../assets/star.png" />
+                    <img class="icon" alt="star icon" src="../assets/star.png" />
                 </div>
             </div>
         </div>
