--- a/portfolio/projects/internet.html
+++ b/portfolio/projects/internet.html
@@ -42,11 +42,11 @@
                  </div>
                  <div class="desc-parent">
                      <div class="desc">
-                         <img class="icon" alt="calendar-icon" src="../assets/calendar.png" />
+                         <img class="icon" alt="calendar icon" src="../assets/calendar.png" />
                          <div class="date">Nov - Dec 2022</div>
                      </div>
                      <div class="desc">
-                         <img class="icon" alt="group-icon" src="../assets/group.png" />
+                         <img class="icon" alt="group icon" src="../assets/group.png" />
                          <div class="date">UX Design, UX Research, Product Ideation</div>
                      </div>
                  </div>
@@ -151,20 +151,20 @@ thoughts/concerns/comments
                 Iteration 1
             </div>
             <div class="img-sections">
-                <img class="imgs" alt="internet-1" src="../assets/internet1.png" />
-                <img class="imgs" alt="internet-2" src="../assets/internet2.png" />
+                <img class="imgs" alt="internet wireframe 1" src="../assets/internet1.png" />
+                <img class="imgs" alt="internet wireframe 2" src="../assets/internet2.png" />
             </div>
             <div class="img-sections">
-                <img class="imgs" alt="internet-3" src="../assets/internet3.png" />
-                <img class="imgs" alt="internet-4" src="../assets/internet4.png" />
+                <img class="imgs" alt="internet wireframe 3" src="../assets/internet3.png" />
+                <img class="imgs" alt="internet wireframe 4" src="../assets/internet4.png" />
             </div>
             <div class="description bold">
                 Iteration 2
             </div>
             <div class="img-sections">
-                <img class="imgs" alt="internet-1" src="../assets/data1.PNG" />
-                <img class="imgs" alt="internet-1" src="../assets/data2.PNG" />
-                <img class="imgs" alt="internet-1" src="../assets/data3.PNG" />
+                <img class="imgs" alt="data wireframe 1" src="../assets/data1.PNG" />
+                <img class="imgs" alt="data wireframe 2" src="../assets/data2.PNG" />
+                <img class="imgs" alt="data wireframe 3" src="../assets/data3.PNG" />
             </div>
         </div>
 
@@ -192,14 +192,14 @@ thoughts/concerns/comments
                 <div class="contact center">
                     <a href = "gaugeme.html">
                         <div class="button left">
-                            <img class="arrow" alt="left-arrow" src="../assets/left.png" />
+                            <img class="arrow" alt="left arrow" src="../assets/left.png" />
                             <div>prev</div>
                         </div>   
                     </a>
                     <a class="small-text" href = "infosystems.html">   
                         <div class="button right">
                             <div>next</div>
-                            <img class="arrow" alt="right-arrow" src="../assets/right.png" />
+                            <img class="arrow" alt="right arrow" src="../assets/right.png" />
                         </div>   
                     </a>
                 </div>
@@ -210,30 +210,30 @@ thoughts/concerns/comments
             <div class="container">
                 <div class="services-list-1">
                     <a class="contact" href = "mailto:huarui.lai@gmail.com" target="_blank">
-                        <img class="icon" alt="mail-icon" src="../assets/plane.png" />
+                        <img class="icon" alt="mail icon" src="../assets/plane.png" />
                         <div class="small-text">
                             <div class="username">huarui.lai@gmail.com</div>
                         </div>
                     </a>
                     <a class="contact" href = "https://github.com/hlai1" target="_blank">
-                        <img class="icon" alt="github-icon" src="../assets/github.png" />
+                        <img class="icon" alt="github icon" src="../assets/github.png" />
                         <div class="small-text">
                             <div class="username">hlai1</div>
                         </div>
                     </a>
                     <a class="contact" href = "https://linkedin.com/in/huarui-lai" target="_blank">
-                        <img class="icon" alt="linkedin-icon" src="../assets/linkedin.png" />
+                        <img class="icon" alt="linkedin icon" src="../assets/linkedin.png" />
                         <div class="small-text">
                             <div class="username">Huarui Lai</div>
                         </div>
                     </a>
                 </div>
                 <div class="contact center">
-                    <img class="icon" alt="star-icon" src="../assets/star.png" />
+                    <img class="icon" alt="star icon" src="../assets/star.png" />
                     <div class="small-text">   
                         <div class="username-1">made by Huarui Lai</div>
                     </div>
-                    <img class="icon" alt="star-icon" src="../assets/star.png" />
+                    <img class="icon" alt="star icon" src="../assets/star.png" />
                 </div>
             </div>
         </div>
