--- a/portfolio/projects/jamjelly.html
+++ b/portfolio/projects/jamjelly.html
@@ -41,11 +41,11 @@
                  </div>
                  <div class="desc-parent">
                      <div class="desc">
-                         <img class="icon" alt="calendar-icon" src="../assets/calendar.png" />
+                         <img class="icon" alt="calendar icon" src="../assets/calendar.png" />
                          <div class="date">Oct - Dec 2021</div>
                      </div>
                      <div class="desc">
-                         <img class="icon" alt="group-icon" src="../assets/group.png" />
+                         <img class="icon" alt="group icon" src="../assets/group.png" />
                          <div class="date">Term Project for 15-112</div>
                      </div>
                  </div>
@@ -116,14 +116,14 @@
                     <div class="subheading">Wireframes</div>
             </div>
             <div class="wire-section">
-                <img class="port" alt="start-page" src="../assets/start.png" />
-                <img class="port" alt="intro-page" src="../assets/intro.png" /> 
-                <img class="port" alt="artist-page" src="../assets/artist.png" /> 
+                <img class="port" alt="start page" src="../assets/start.png" />
+                <img class="port" alt="intro page" src="../assets/intro.png" /> 
+                <img class="port" alt="artist page" src="../assets/artist.png" /> 
             </div>
             <div class="wire-section">
-                <img class="port" alt="mood-page" src="../assets/mood.png" />
-                <img class="port" alt="genre-page" src="../assets/genre.png" /> 
-                <img class="port" alt="playlist-page" src="../assets/playlist.png" /> 
+                <img class="port" alt="mood page" src="../assets/mood.png" />
+                <img class="port" alt="genre page" src="../assets/genre.png" /> 
+                <img class="port" alt="playlist page" src="../assets/playlist.png" /> 
             </div>
         </div>
 
@@ -159,14 +159,14 @@
                 <div class="contact center">
                     <a href = "google.html">
                         <div class="button left">
-                            <img class="arrow" alt="left-arrow" src="../assets/left.png" />
+                            <img class="arrow" alt="left arrow" src="../assets/left.png" />
                             <div>prev</div>
                         </div>   
                     </a>
                     <a class="small-text" href = "pamela.html">   
                         <div class="button right">
                             <div>next</div>
-                            <img class="arrow" alt="right-arrow" src="../assets/right.png" />
+                            <img class="arrow" alt="right arrow" src="../assets/right.png" />
                         </div>   
                     </a>
                 </div>
@@ -177,30 +177,30 @@
             <div class="container">
                 <div class="services-list-1">
                     <a class="contact" href = "mailto:huarui.lai@gmail.com" target="_blank">
-                        <img class="icon" alt="mail-icon" src="../assets/plane.png" />
+                        <img class="icon" alt="mail icon" src="../assets/plane.png" />
                         <div class="small-text">
                             <div class="username">huarui.lai@gmail.com</div>
                         </div>
                     </a>
                     <a class="contact" href = "https://github.com/hlai1" target="_blank">
-                        <img class="icon" alt="github-icon" src="../assets/github.png" />
+                        <img class="icon" alt="github icon" src="../assets/github.png" />
                         <div class="small-text">
                             <div class="username">hlai1</div>
                         </div>
                     </a>
                     <a class="contact" href = "https://linkedin.com/in/huarui-lai" target="_blank">
-                        <img class="icon" alt="linkedin-icon" src="../assets/linkedin.png" />
+                        <img class="icon" alt="linkedin icon" src="../assets/linkedin.png" />
                         <div class="small-text">
                             <div class="username">Huarui Lai</div>
                         </div>
                     </a>
                 </div>
                 <div class="contact center">
-                    <img class="icon" alt="star-icon" src="../assets/star.png" />
+                    <img class="icon" alt="star icon" src="../assets/star.png" />
                     <div class="small-text">   
                         <div class="username-1">made by Huarui Lai</div>
                     </div>
-                    <img class="icon" alt="star-icon" src="../assets/star.png" />
+                    <img class="icon" alt="star icon" src="../assets/star.png" />
                 </div>
             </div>
         </div>
