moving files into correct directories

--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -7,23 +7,23 @@
         <title>Huarui Lai</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
         <link rel="icon" type="image/png" href="../assets/h-icon.png" />
-        <link rel="stylesheet" href="../css/style.css">
-        <link rel="stylesheet" href="../projects/projects.css">
-        <link rel="stylesheet" href="about-page.css">
-        <script defer src="js/app.js"></script>
+        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/projects.css">
+        <link rel="stylesheet" href="./css/about-page.css">
+        <script defer src="assets/about/js/app.js"></script>
 
     </head>
     <body>
         <header class="primary-header flex">
             <h1 class="logo">
-                <a href="../index.html">
-                    <img class="huarui-logo" alt="personal logo with letter H" src="../assets/huarui-logo.PNG" />
+                <a href="index.html">
+                    <img class="huarui-logo" alt="personal logo with letter H" src="assets/H-logo.png" />
                 </a>
             </h1>
             <nav>
                 <ul id="primary-navigation" class="primary-navigation flex">
                     <li>
-                        <a href="../assets/resume.pdf" target="_blank" class="space">
+                        <a href="assets/resume.pdf" target="_blank" class="space">
                             Resume
                         </a>
                     </li>
@@ -43,11 +43,11 @@
                  </div>
                  <div class="desc-parent">
                      <div class="desc">
-                         <img class="icon" alt="calendar-icon" src="../assets/calendar.png" />
+                         <img class="icon" alt="calendar-icon" src="assets/calendar.png" />
                          <div class="date">UI/UX Designer</div>
                      </div>
                      <div class="desc">
-                         <img class="icon" alt="group-icon" src="../assets/group.png" />
+                         <img class="icon" alt="group-icon" src="assets/group.png" />
                          <div class="date"> friend, adventure-seeker, dog-lover, human
                      </div>
                  </div>
@@ -60,9 +60,9 @@
                     <div class="collage">
                         <div class="collage-left">
                             <div class="abt-img-sections">
-                                <img class="abt-imgs" alt="internet-1" src="pfp1.jpg" />
-                                <img class="abt-imgs" alt="internet-2" src="yosemite-selfie.jpg" />
-                                <img class="abt-imgs" alt="internet-2" src="ny-art.jpg" />
+                                <img class="abt-imgs" alt="internet-1" src="assets/about/pfp1.jpg" />
+                                <img class="abt-imgs" alt="internet-2" src="assets/about/yosemite-selfie.jpg" />
+                                <img class="abt-imgs" alt="internet-2" src="assets/about/ny-art.jpg" />
                             </div>
                         </div>
 
@@ -86,12 +86,12 @@
                         </div>
                         <div class="collage-left">
                             <div class="abt-img-sections">
-                                <img class="abt-imgs" alt="internet-1" src="germany.jpg" />
-                                <img class="abt-imgs" alt="internet-2" src="sahara-desert.jpg" />
-                                <img class="abt-imgs" alt="internet-2" src="blue-city.jpg" />
-                                <img class="abt-imgs" alt="internet-2" src="surf.jpg" />
-                                <img class="abt-imgs" alt="internet-2" src="coffee-farm.jpg" />
-                                <img class="abt-imgs" alt="internet-2" src="fruit.jpg" />
+                                <img class="abt-imgs" alt="internet-1" src="assets/about/germany.jpg" />
+                                <img class="abt-imgs" alt="internet-2" src="assets/about/sahara-desert.jpg" />
+                                <img class="abt-imgs" alt="internet-2" src="assets/about/blue-city.jpg" />
+                                <img class="abt-imgs" alt="internet-2" src="assets/about/surf.jpg" />
+                                <img class="abt-imgs" alt="internet-2" src="assets/about/coffee-farm.jpg" />
+                                <img class="abt-imgs" alt="internet-2" src="assets/about/fruit.jpg" />
                             </div>
                         </div>
                     </div>
@@ -103,10 +103,10 @@
                     <div class="collage">
                         <div class="collage-left">
                             <div class="abt-img-sections">
-                                <img class="big-img" alt="internet-1" src="drone-shot.jpg" />
-                                <img class="abt-imgs" alt="internet-2" src="hot-pot.jpg" />
-                                <img class="abt-imgs" alt="internet-2" src="pastries.jpg" />
-                                <img class="big-img" alt="internet-2" src="drone2.jpg" />
+                                <img class="big-img" alt="internet-1" src="assets/about/drone-shot.jpg" />
+                                <img class="abt-imgs" alt="internet-2" src="assets/about/hot-pot.jpg" />
+                                <img class="abt-imgs" alt="internet-2" src="assets/about/pastries.jpg" />
+                                <img class="big-img" alt="internet-2" src="assets/about/drone2.jpg" />
                             </div>
                         </div>
                         <div class="collage-right">
@@ -127,10 +127,10 @@
                         </div>
                         <div class="collage-left">
                             <div class="abt-img-sections">
-                                <img class="big-img" alt="internet-1" src="asa-dance.JPG" />
-                                <img class="abt-imgs" alt="internet-2" src="build-booth.jpg" />
-                                <img class="resize-img" alt="internet-2" src="pyramid.jpg" />
-                                <img class="big-img" alt="internet-2" src="booth.jpg" />
+                                <img class="big-img" alt="internet-1" src="assets/about/asa-dance.JPG" />
+                                <img class="abt-imgs" alt="internet-2" src="assets/about/build-booth.jpg" />
+                                <img class="resize-img" alt="internet-2" src="assets/about/pyramid.jpg" />
+                                <img class="big-img" alt="internet-2" src="assets/about/booth.jpg" />
                             </div>
                         </div>
                     </div>
@@ -145,30 +145,30 @@
                 <div class="container">
                     <div class="services-list-1">
                         <a class="contact" href = "mailto: huarui.lai@gmail.com" target="_blank">
-                            <img class="icon" alt="mail-icon" src="../assets/plane.png" />
+                            <img class="icon" alt="mail-icon" src="assets/plane.png" />
                             <div class="small-text">
                                 <div class="username">huarui.lai@gmail.com</div>
                             </div>
                         </a>
                         <a class="contact" href = "https://github.com/hlai1" target="_blank">
-                            <img class="icon" alt="github-icon" src="../assets/github.png" />
+                            <img class="icon" alt="github-icon" src="assets/github.png" />
                             <div class="small-text">
                                 <div class="username">hlai1</div>
                             </div>
                         </a>
                         <a class="contact" href = "https://linkedin.com/in/huarui-lai" target="_blank">
-                            <img class="icon" alt="linkedin-icon" src="../assets/linkedin.png" />
+                            <img class="icon" alt="linkedin-icon" src="assets/linkedin.png" />
                             <div class="small-text">
                                 <div class="username">Huarui Lai</div>
                             </div>
                         </a>
                     </div>
                     <div class="contact center">
-                        <img class="icon" alt="star-icon" src="../assets/star.png" />
+                        <img class="icon" alt="star-icon" src="assets/star.png" />
                         <div class="small-text">   
                             <div class="username-1">made by Huarui Lai</div>
                         </div>
-                        <img class="icon" alt="star-icon" src="../assets/star.png" />
+                        <img class="icon" alt="star-icon" src="assets/star.png" />
                     </div>
                 </div>
             </div>
