--- a/portfolio/projects/google.html
+++ b/portfolio/projects/google.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
         <link rel="icon" type="image/png" href="../assets/h-icon.png" />
         <link rel="stylesheet" href="../css/style.css">
-        <link rel="stylesheet" href="projects.css">
+        <link rel="stylesheet" href="../css/projects.css">
         <script defer src="../js/google.js"></script>
 
     </head>
@@ -18,7 +18,7 @@
         <header class="primary-header flex">
             <h1 class="logo">
                 <a href="../index.html">
-                    <img class="huarui-logo" alt="personal logo with letter H" src="../assets/H..png" />
+                    <img class="huarui-logo" alt="personal logo with letter H" src="../assets/H-logo.png" />
                 </a>
             </h1>
             <nav>
@@ -29,7 +29,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="../about/about.html" class="space">
+                        <a href="../about.html" class="space">
                             About
                         </a>
                     </li>
