--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -18,6 +18,7 @@
         <title>Huarui Lai</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/projects.css">
         <script defer src="js/app.js"></script>
         
     </head>
@@ -25,7 +26,7 @@
         <header class="primary-header flex">
             <h1 class="logo">
                 <a href="index.html">
-                    <img class="huarui-logo" alt="personal logo with letter H" src="assets/H..png" />
+                    <img class="huarui-logo" alt="personal logo with letter H" src="assets/H-logo.png" />
                 </a>
             </h1>
             <nav>
@@ -37,7 +38,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="./about/about.html" class="space">
+                            <a href="about.html" class="space">
                                 About
                             </a>
                         </li>
