--- a/portfolio/projects/gaugeme.html
+++ b/portfolio/projects/gaugeme.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
         <link rel="icon" type="image/png" href="../assets/h-icon.png" />
         <link rel="stylesheet" href="../css/style.css">
-        <link rel="stylesheet" href="projects.css">
+        <link rel="stylesheet" href="../css/projects.css">
         <script defer src="js/app.js"></script>
 
     </head>
@@ -16,7 +16,7 @@
         <header class="primary-header flex">
             <h1 class="logo">
                 <a href="../index.html">
-                    <img class="huarui-logo" alt="personal logo with letter H" src="../assets/huarui-logo.PNG" />
+                    <img class="huarui-logo" alt="personal logo with letter H" src="../assets/H-logo.png" />
                 </a>
             </h1>
             <nav>
@@ -27,7 +27,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="../about/about.html" class="space">
+                        <a href="../about.html" class="space">
                             About
                         </a>
                     </li>
@@ -144,12 +144,12 @@
                     <a href = "pamela.html">
                         <div class="button left">
                             <img class="arrow" alt="left arrow" src="../assets/left.png" />
-                            <div>prev</div>
+                            <div class="bold">prev</div>
                         </div>   
                     </a>
                     <a class="small-text" href = "internet.html">   
                         <div class="button right">
-                            <div>next</div>
+                            <div class="bold">next</div>
                             <img class="arrow" alt="right arrow" src="../assets/right.png" />
                         </div>   
                     </a>
