--- a/portfolio/projects/infosystems.html
+++ b/portfolio/projects/infosystems.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
         <link rel="icon" type="image/png" href="../assets/h-icon.png" />
         <link rel="stylesheet" href="../css/style.css">
-        <link rel="stylesheet" href="projects.css">
+        <link rel="stylesheet" href="../css/projects.css">
         <script defer src="js/app.js"></script>
 
     </head>
@@ -16,7 +16,7 @@
         <header class="primary-header flex">
             <h1 class="logo">
                 <a href="../index.html">
-                    <img class="huarui-logo" alt="personal logo with letter H" src="../assets/huarui-logo.PNG" />
+                    <img class="huarui-logo" alt="personal logo with letter H" src="../assets/H-logo.png" />
                 </a>
             </h1>
             <nav>
@@ -27,7 +27,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="../about/about.html" class="space">
+                        <a href="../about.html" class="space">
                             About
                         </a>
                     </li>
@@ -73,7 +73,7 @@
             <div class="description">
                 Here are a few graphics I've designed for the Information Systems Department
                 at Carnegie Mellon University. Outside of graphic design, I help manage the <span>
-                    <a href="google.html" class="green-font" target="_blank">CMU IS Website</a>
+                    <a href="google.html" class="green-font bold" target="_blank">CMU IS Website</a>
                   </span>
                 by uploading up-to-date content, resources, and opportunities for students.
             </div>
