--- a/portfolio/projects/jamjelly.html
+++ b/portfolio/projects/jamjelly.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
         <link rel="icon" type="image/png" href="../assets/h-icon.png" />
         <link rel="stylesheet" href="../css/style.css">
-        <link rel="stylesheet" href="projects.css">
+        <link rel="stylesheet" href="../css/projects.css">
         <script defer src="js/app.js"></script>
 
     </head>
@@ -16,7 +16,7 @@
         <header class="primary-header flex">
             <h1 class="logo">
                 <a href="../index.html">
-                    <img class="huarui-logo" alt="personal logo with letter H" src="../assets/huarui-logo.PNG" />
+                    <img class="huarui-logo" alt="personal logo with letter H" src="../assets/H-logo.png" />
                 </a>
             </h1>
             <nav>
@@ -27,7 +27,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="../about/about.html" class="space">
+                        <a href="../about.html" class="space">
                             About
                         </a>
                     </li>
